Enhance responses types and swagger
